--- a/weather.html
+++ b/weather.html
@@ -11,7 +11,7 @@
     <div class="card">
     <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button><img src="/Search.png" alt="search Icon"></button>
+            <button><img src="Search.png" alt="search Icon"></button>
         </div>
     </div>
         <div class="error">
@@ -21,19 +21,19 @@
         <div class="card2">
             <h3>Embrace the storm, find beauty in chaos.</h3>
         <div class="weather">
-            <img src="image/Rain.png" alt="weather icon" class="weather-icon">
+            <img src="Rain.png" alt="weather icon" class="weather-icon">
             <h1 class="temp">31°C</h1>
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
-                    <img src="image/Humidity.png" >
+                    <img src="Humidity.png" >
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="image/wind.png" >
+                    <img src="wind.png" >
                     <div>
                         <p class="wind">15 km/h</p>
                         <p>Wind Speed</p>
@@ -44,7 +44,7 @@
                 <p class="sunrise">Sunrise: 6:00 AM</p>
                 <p class="sunset">Sunset: 6:00 PM</p>
             </div>
-<p class="activity"></p>
+            <p class="activity"></p>
             <div class="forecast">
                 <h3>Hourly Forecast</h3>
                 <div class="forecast-details">
@@ -60,6 +60,6 @@
             <p id="alertMessage"></p>
         </div>
     </div>
-    <script src="./weather.js"></script>
+    <script src="weather.js"></script>
 </body>
 </html>
